# notapeek

./: .gitignore  ARCHITECTURE.md  README.md  index.html  package.json
scripts/: build-quicklook.sh  package-macos.sh  release-dmg.sh
src/: App.tsx  markdownLive.ts  previewCss.ts  renderMarkdown.ts  styles.css  taskList.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/quicklook/: Info.plist  PreviewViewController.swift  QuickLookMD.entitlements  project.yml
src-tauri/quicklook/QuickLookMD.xcodeproj/: project.pbxproj
src-tauri/quicklook/Resources/: preview.css
src-tauri/src/: lib.rs  main.rs
