[package]
name = "notapeek"
version = "1.0.1"
description = "NotaPeek — beautiful Quick Look + viewer for .md files"
authors = ["Rachel Larralde"]
edition = "2021"

[lib]
name = "notapeek_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(target_os = \"macos\")".dependencies]
window-vibrancy = "0.6"
